# overlandr

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md  dockerfile  makefile
.pi/: settings.json
.pi/extensions/: guardrails.json
.pi/prompts/: docs.md  examples.md
benches/: build.rs  dijkstra.rs
docs/: algorithm.md  reference.md
profiles/: overland.toml
routes/: 199_california-astoria_oregon.gpx  2_montana-59_wyoming.gpx
src/: cli.rs  conflation.rs  lib.rs  main.rs  serve.rs
src/geom/: haversine.rs  mod.rs
src/gpx/: writer.rs
src/graph/: builder.rs  cache.rs  contract.rs  mod.rs  spatial.rs
src/osm/: filter.rs  loader.rs  mod.rs  tags.rs
src/profile/: mod.rs  toml.rs
src/routing/: alternatives.rs  dijkstra.rs  fuel.rs  mod.rs  score.rs
src/usfs/: loader.rs  mod.rs
tests/: integration_build.rs  integration_fuel.rs  integration_route.rs
