[package]
name = "overlandr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "overlandr"
path = "src/main.rs"

[lib]
name = "overlandr"
path = "src/lib.rs"

[[bench]]
name = "dijkstra"
harness = false

[[bench]]
name = "build"
harness = false

[dependencies]
osmpbf       = "0.3"
clap         = { version = "4", features = ["derive", "env"] }
serde        = { version = "1", features = ["derive"] }
toml         = "0.8"
bincode      = "1.3"
zstd         = "0.13"
rstar        = "0.12"
geo          = "0.28"
gpx          = "0.10"
quick-xml    = "0.36"
pathfinding  = "4"
rayon        = "1"
indicatif    = "0.17"
tracing      = "0.1"
tracing-subscriber = "0.3"
thiserror    = "1"
anyhow       = "1"
chrono       = { version = "0.4", features = ["serde"] }
serde_json   = "1"
sha2         = "0.10"
shapefile    = "0.6"
tokio        = { version = "1", features = ["full"] }
axum         = { version = "0.7" }
tower-http   = { version = "0.5", features = ["trace", "cors", "limit", "timeout"] }

[dev-dependencies]
criterion    = "0.5"
proptest     = "1"
insta        = "1"
